implemented photo API
